correct text align

--- a/src/components/Verse.scss
+++ b/src/components/Verse.scss
@@ -14,6 +14,7 @@
 
     h3 {
       grid-column: 1 / span 3;
+      text-align: center;
     }
 
     p {
